# CECS275

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  RUBRIC.md  build.ps1  docs.ps1  docs.sh  format.ps1  format.sh
.github/workflows/: ci.yml  docs.yml
common/core/: README.md  utils.cpp  utils.h
common/math/: README.md  taxmath.cpp  taxmath.h
common/virtual/: tax.h
data/: constants.h  tax_deduction.txt  tax_rate_and_bracket.txt
gui/: GTK_SETUP.md  style.css
gui/src/: gui_data.cpp  gui_data.h  line_chart.cpp  line_chart.h  login_dialog.cpp  login_dialog.h  main_window.cpp  main_window.h  pie_chart.cpp  pie_chart.h  tax_app_gui.cpp
